--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 This is my official Portfolio website to shows all
                 <br>Details and work experience
             </p>
-            <a href="Resume-Yash-Niboriya.pdf" download>DOWNLOAD RESUME</a>
+            <a href="https://drive.google.com/file/d/1FOcRUM75D1jHVvg8OqOY9JQxKV6UGnjF/view?usp=drive_link" download>DOWNLOAD RESUME</a>
             <div class="icons">
 
                 <a href="https://www.instagram.com/yash_niboriya/" class="fa fa-instagram" target="_blank"></a>
@@ -69,7 +69,7 @@
                     <div><span>Name:</span><span>Yash Niboriya</span></div>
                     <div><span>Age:</span><span>20 Years</span></div>
                     <div><span>Email:</span><span>niboriyayash7@gmail.com<span>
-                            <a href="Resume-Yash-Niboriya.pdf" download>DOWNLOAD CV</a>        
+                            <a href="https://drive.google.com/file/d/1FOcRUM75D1jHVvg8OqOY9JQxKV6UGnjF/view?usp=drive_link" download>DOWNLOAD CV</a>        
             </section>
             <!-- Info Section Ends -->
 
@@ -110,33 +110,35 @@
     <!-- Services  starts-->
     <section class="services" id="services">
         <div class="heading">
-            <h2>Our Services</h2>
+            <h2>My Projects</h2>
         </div>
         <div class="services-content">
 
             <div class="services-box">
-                <i class='bx bx-code-alt'></i>
-                <h3>Web Development</h3>
-                <a href="https://www.geeksforgeeks.org/web-development/" target="_blank">Learn More</a>
+                <i class='bx bxl-html5'></i>
+                <h3>Login Authentication</h3>
+                <a href="https://github.com/Yashniboriya/SYNC/tree/main/SYNC%20intern/Login%20Authentication" target="_blank">Click Here</a>
             </div>
 
             <div class="services-box">
-                <i class='bx bx-server'></i>
-                <h3>Front-End Development</h3>
-                <a href="https://www.bing.com/search?q=frontend+development&cvid=e35cd6c6ae824b22a3dd8d2856e67faa&aqs=edge..69i57j69i64.8942j0j4&FORM=ANAB01&PC=W046"
-                    target="_blank">Learn More</a>
+                <i class='bx bxl-css3'></i>
+                <h3>Tribute Page</h3>
+                <a href="https://github.com/Yashniboriya/htmlcss/tree/main/Tribute%20Page"
+                    target="_blank">Click Here</a>
             </div>
             <div class="services-box">
-                <i class='bx bx-brush'></i>
-                <h3>Designing</h3>
-                <a href="https://www.javatpoint.com/software-engineering-software-design" target="_blank">Learn More</a>
+                <i class='bx bxl-javascript'></i>
+                <h3>Quiz App</h3>
+                <a href="hhttps://github.com/Yashniboriya/SYNC/tree/main/SYNC%20intern/Quiz%20app" target="_blank">Click Here</a> 
             </div>
 
             <div class="services-box">
-                <i class='bx bxl-android'></i>
-                <h3>Java Development</h3>
-                <a href="https://www.javatpoint.com/java-tutorial" target="_blank">Learn More</a>
+                <i class='bx bxl-java'></i>
+                <h3>Guess Number Game</h3>
+                <a href="https://github.com/Yashniboriya/Myprojects/blob/main/Guessgame.java" target="_blank">Click Here</a>
             </div>
+
+            
         </div>
     </section>
     <!-- Services  ends-->
