--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
 
         <div class="detail">
-            <h1>I,m Yash <span>Niboriya</span></h1>
+            <h1>I am Yash <span>Niboriya</span></h1>
             <p>
                 This is my official Portfolio website to shows all
                 <br>Details and work experience
